fix image and text overflow on view post

--- a/FlaskApp/static/css/style.css
+++ b/FlaskApp/static/css/style.css
@@ -47,7 +47,9 @@ li a{
 
 .post-text {
     white-space: pre-wrap;
+    margin: auto;
     margin-bottom: 30px;
+    max-width: 90%;
 }
 
 #content {
